ИТОГОВОЕ ЗАДАНИЕ 10.5.1 (HW-03)

--- a/NewsPaper/templates/flatpages/default.html
+++ b/NewsPaper/templates/flatpages/default.html
@@ -35,6 +35,12 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/news/">News</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/news/create/">create</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/news/search/">search</a>
+                        </li>
                     </ul>
                 </div>
             </div>
