--- a/NewsPaper/templates/news.html
+++ b/NewsPaper/templates/news.html
@@ -7,6 +7,10 @@
 
 {% load censor %}
 {% load custom_tags %}
+{% load cache %}
+
+
+{% cache 60 news_all %}
 
 {% block title %}
 Post
@@ -60,5 +64,6 @@ Post
     <h2>новостей нет!</h2>
 {% endif %}
 {% endblock content %}
+{% endcache %}
 </body>
 </html>
