--- a/NewsPaper/templates/flatpages/default.html
+++ b/NewsPaper/templates/flatpages/default.html
@@ -18,7 +18,7 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
             <div class="container">
-                <a class="navbar-brand" href="#">News Paper</a>
+                <a class="navbar-brand" href="#">MMORPG</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                         data-target="#navbarResponsive"
                         aria-controls="navbarResponsive" aria-expanded="false"
@@ -28,19 +28,19 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home
+                            <!--<a class="nav-link" href="#">Home
                                 <span class="sr-only">(current)</span>
-                            </a>
+                            </a-->
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/news/">News</a>
+                            <a class="nav-link" href="/news/">пост</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="/news/create/">create</a>
+                            <a class="nav-link" href="{% url 'post_add' %}">создать</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/news/search/">search</a>
-                        </li>
+                        <!--li class="nav-item">
+                            <a class="nav-link" href="/news/create/">комментарий</a>
+                        </li-->
                     </ul>
                 </div>
             </div>
