--- a/NewsPaper/templates/news.html
+++ b/NewsPaper/templates/news.html
@@ -7,10 +7,6 @@
 
 {% load censor %}
 {% load custom_tags %}
-{% load cache %}
-
-
-{% cache 60 news_all %}
 
 {% block title %}
 Post
@@ -30,13 +26,14 @@ Post
             <th>категории</th>
             <th>дата публикации</th>
             <th>текст</th>
+            <th>коментарии</th>
         </tr>
-        {% for post in filter.qs %}
+        {% for post in page_obj %}
         <td>
             <a href="{% url 'post_detail' post.id %}">{{ post.name|title }}</a> <!-- ссылка на сам пост -->
-            <a href="{% url 'post_edit' post.id %}"style="background-color:#ffffa1"><u>Редактировать</u></a> <!--ссылка на редактирование поста-->
+            <!--<a href="{% url 'post_edit' post.id %}"style="background-color:#ffffa1"><u>Редактировать</u></a>--> <!--ссылка на редактирование поста-->
 
-            <a href="{% url 'post_delete' post.id %}"style="color:red"><u> Удалить </u></a> <!-- добавим ссылку на удаление поста-->
+            <!--<a href="{% url 'post_delete' post.id %}"style="color:red"><u> Удалить </u></a> --><!-- добавим ссылку на удаление поста-->
         </td>
         <tr>
         </tr>
@@ -49,21 +46,43 @@ Post
             </td>
             <td>{{ post.date_in|date:'d M Y'}}</td>
             <td>{{ post.text|censor|truncatechars:20}}</td>
+            <td>{% for comment in post.comments.all %}
+                <p>{{ comment.text }}</p>
+            {% empty %}
+                <p>нет комментариев</p>
+            {% endfor %}
+            </td>
         </tr>
         {% endfor %}
         </thead>
     </table>
 
-{% if is_not_author %}
-<button> <a href="{% url 'upgrade' %}"> стать автором!</a> </button>
-{% else %}
-<h1>вы уже автор</h1>
-{% endif %}
+    <div class="pagination">
+        <span class="step-links">
+            {% if page_obj.has_previous %}
+                <a href="?page=1">&laquo; первая</a>
+                <a href="?page={{ page_obj.previous_page_number }}">'<<<'</a>
+            {% endif %}
+
+            <span class="current-page">
+                страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
+            </span>
+
+            {% if page_obj.has_next %}
+                <a href="?page={{ page_obj.next_page_number }}">'>>>'</a>
+                <a href="?page={{ page_obj.paginator.num_pages }}">последняя &raquo;</a>
+            {% endif %}
+        </span>
+    </div>
+
+    {% if is_not_author %}
+        <button><a href="{% url 'upgrade' %}"> стать автором!</a></button>
+    {% else %}
+        <h1>вы уже автор</h1>
+    {% endif %}
 
 {% else %}
     <h2>новостей нет!</h2>
 {% endif %}
 {% endblock content %}
-{% endcache %}
 </body>
-</html>
